tryouts_with_interpreter/DS_lists
python3
Python 3.4.3 (v3.4.3:9b73f1c3e601, Feb 23 2015, 02:52:03) 
[GCC 4.2.1 (Apple Inc. build 5666) (dot 3)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 
>>> 
>>> list = [10,11,12,13,14,15,16,17,18,19]
>>> print list
  File "<stdin>", line 1
    print list
             ^
SyntaxError: Missing parentheses in call to 'print'
>>> print(list)
[10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
>>> list.append(20)
>>> print(list)
[10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
>>> newList = [21,22,23,24]
>>> list.extend(newList)
>>> print(list)
[10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
>>> list.insert(0,9)
>>> print(list)
[9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
>>> list.insert(len(list):, 25)
  File "<stdin>", line 1
    list.insert(len(list):, 25)
                         ^
SyntaxError: invalid syntax
>>> list.insert(len(list), 25)
>>> print(list)
[9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]
>>> list[len(list):] = [26]
>>> print(list)
[9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
>>> list.remove(26)
>>> list.pop(0)
9
>>> print(list)
[10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]
>>> list.pop()
25
>>> list.count(x)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'x' is not defined
>>> list.count(24)
1
>>> list.append(1)
>>> print(list)
[10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 1]
>>> list.sort()
>>> print(list)
[1, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
>>> list.reverse()
>>> print(list)
[24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 1]
>>> 
